force-app/main/default/objects/Deal_Sources_Uses__c.object
<CustomObject>
    <description>The costs and funds related to a transaction.</description>
    <fields>
        <fullName>Basis_for_Probability_Estimate__c</fullName>
        <inlineHelpText>Please describe the reasoning behind how you came up with the % probability estimate.</inlineHelpText>
        <label>Basis for % Probability Estimate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Amount__c</fullName>
        <description>The dollar amount of the cost.</description>
        <label>Cost Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Description__c</fullName>
        <description>Enter a description of the cost to add further detail.</description>
        <label>Cost Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <description>Select the type of cost to record.</description>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Capital Improvements</fullName>
                </value>
                <value>
                    <fullName>Closing Costs</fullName>
                </value>
                <value>
                    <fullName>Closing Pre-Acquisition Costs</fullName>
                </value>
                <value>
                    <fullName>Conservation Land</fullName>
                </value>
                <value>
                    <fullName>Contract Fees</fullName>
                </value>
                <value>
                    <fullName>Environment Site Analysis</fullName>
                </value>
                <value>
                    <fullName>Escrow Fees</fullName>
                </value>
                <value>
                    <fullName>Future Management Account Funding Per TIC</fullName>
                </value>
                <value>
                    <fullName>Indirect Costs</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Interim Management (through the sale of ranch)</fullName>
                </value>
                <value>
                    <fullName>Interim Management Cleanup</fullName>
                </value>
                <value>
                    <fullName>Legal Fees</fullName>
                </value>
                <value>
                    <fullName>Other Direct Costs</fullName>
                </value>
                <value>
                    <fullName>Other Direct Costs in Funding Mgmt Acct</fullName>
                </value>
                <value>
                    <fullName>Other Direct Pre-Acquisition Costs</fullName>
                </value>
                <value>
                    <fullName>Phase I</fullName>
                </value>
                <value>
                    <fullName>Phase II</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax</fullName>
                </value>
                <value>
                    <fullName>Stewardship Endowment</fullName>
                </value>
                <value>
                    <fullName>Stewardship Management</fullName>
                </value>
                <value>
                    <fullName>Stewardship Set-Aside</fullName>
                </value>
                <value>
                    <fullName>Subdivision</fullName>
                </value>
                <value>
                    <fullName>Title Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <inlineHelpText>Please enter in the date you expect to incur the cost or receive the fund.</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Amount__c</fullName>
        <label>Fund Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund_Status__c</fullName>
        <label>Fund Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Intend to Apply or Ask for Funds</fullName>
                </value>
                <value>
                    <fullName>Applied for Funds &amp; No Response Received</fullName>
                </value>
                <value>
                    <fullName>Verbal Promise of Funds</fullName>
                </value>
                <value>
                    <fullName>Funds Awarded &amp; Agreement is in Negotiation</fullName>
                </value>
                <value>
                    <fullName>Funds in Hand &amp; Received Signed Agreement</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Type__c</fullName>
        <label>Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bridge Loan</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Sale Revenue</fullName>
                </value>
                <value>
                    <fullName>Stewardship Endowment</fullName>
                </value>
                <value>
                    <fullName>Stewardship Set-Aside</fullName>
                </value>
                <value>
                    <fullName>Restricted Gift</fullName>
                </value>
                <value>
                    <fullName>Restricted Reserve</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the funding is approved, such as an executed grant agreement, an approved loan, or use of TNC reserves, then check the checkbox.</inlineHelpText>
        <label>Funds Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Probability_of_Funding__c</fullName>
        <inlineHelpText>Enter your best guess at the probability that we will receive funds from this source.</inlineHelpText>
        <label>% Probability of Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Award_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Project/Award ID combination for this source/use.</inlineHelpText>
        <label>Project/Award ID</label>
        <referenceTo>Project_IDs__c</referenceTo>
        <relationshipLabel>Deal Sources and Uses</relationshipLabel>
        <relationshipName>Deal_Sources_and_Uses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Description__c</fullName>
        <label>Source Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Program_Detail__c</fullName>
        <inlineHelpText>If applicable, select the detailed information related to the source program.</inlineHelpText>
        <label>Source Program Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARCO Spill Settlement</fullName>
                </value>
                <value>
                    <fullName>General Fund</fullName>
                </value>
                <value>
                    <fullName>General Fund, Chapter 52, Statutes of 2000</fullName>
                </value>
                <value>
                    <fullName>Habitat Conservation Fund, Statutes 1999, 3640-301-0262</fullName>
                </value>
                <value>
                    <fullName>Prop 12</fullName>
                </value>
                <value>
                    <fullName>Prop 13</fullName>
                </value>
                <value>
                    <fullName>Prop 1B</fullName>
                </value>
                <value>
                    <fullName>Prop 1E</fullName>
                </value>
                <value>
                    <fullName>Prop 204</fullName>
                </value>
                <value>
                    <fullName>Prop 204, Cat. III</fullName>
                </value>
                <value>
                    <fullName>Prop 40</fullName>
                </value>
                <value>
                    <fullName>Prop 50</fullName>
                </value>
                <value>
                    <fullName>Prop 84</fullName>
                </value>
                <value>
                    <fullName>River Protection Sub-Account Chapter 52, Prop. 13</fullName>
                </value>
                <value>
                    <fullName>River Protection Sub-Account Chapter 52, Statutes of 2000, 3640-301-6015</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Program__c</fullName>
        <label>Source Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acres for America</fullName>
                </value>
                <value>
                    <fullName>Bay-Delta Sport Fishing Enhancement Stamp (BDSFES)</fullName>
                </value>
                <value>
                    <fullName>Bring Back the Natives</fullName>
                </value>
                <value>
                    <fullName>California Landscape Conservation Cooperative</fullName>
                </value>
                <value>
                    <fullName>California Riparian Habitat Conservation Program (CRHCP)</fullName>
                </value>
                <value>
                    <fullName>California Sea Grant</fullName>
                </value>
                <value>
                    <fullName>Central Valley Improvement Project Act (CVPIA)</fullName>
                </value>
                <value>
                    <fullName>Central Valley Improvement Project Act (CVPIA)(b)(1)other</fullName>
                </value>
                <value>
                    <fullName>Climate Adaptation Fund</fullName>
                </value>
                <value>
                    <fullName>Coastal &amp; Estuarine Lands Conservation (CELCP)</fullName>
                </value>
                <value>
                    <fullName>Coastal and Marine Habitat Restoration Project</fullName>
                </value>
                <value>
                    <fullName>Community-based Restoration Program</fullName>
                </value>
                <value>
                    <fullName>Conservation Partners Program</fullName>
                </value>
                <value>
                    <fullName>Cooperative Endangered Species (Section 6)</fullName>
                </value>
                <value>
                    <fullName>Ecosystem Restoration on Agricultural Lands (ERAL)</fullName>
                </value>
                <value>
                    <fullName>Ecosystem Restoration Program</fullName>
                </value>
                <value>
                    <fullName>Eelgrass Restoration and Monitoring in San Francisco Bay</fullName>
                </value>
                <value>
                    <fullName>Environmental Enhancement Fund (EEF)</fullName>
                </value>
                <value>
                    <fullName>Environmental Enhancement Mitigation Program (CALTRANS EEMP)</fullName>
                </value>
                <value>
                    <fullName>Environmental Solutions for Communities</fullName>
                </value>
                <value>
                    <fullName>Farm &amp; Ranch Lands Protection Program (FRPP)</fullName>
                </value>
                <value>
                    <fullName>Fisheries Innovation Fund</fullName>
                </value>
                <value>
                    <fullName>Fisheries Restoration Grant Program (FRGP)</fullName>
                </value>
                <value>
                    <fullName>Five Star and Urban Waters Restoration Grant Program</fullName>
                </value>
                <value>
                    <fullName>Flood Protection Corridor Program</fullName>
                </value>
                <value>
                    <fullName>FloodSAFE Environmental Stewardship and Statewide Resources</fullName>
                </value>
                <value>
                    <fullName>Forest Conservation Program</fullName>
                </value>
                <value>
                    <fullName>Forest Legacy Program</fullName>
                </value>
                <value>
                    <fullName>General Fund, Chapter 52, Statutes of 2000</fullName>
                </value>
                <value>
                    <fullName>Grasslands Reserve Program (GRP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Mitigation</fullName>
                </value>
                <value>
                    <fullName>TNC Loan</fullName>
                </value>
                <value>
                    <fullName>TNC Operating</fullName>
                </value>
                <value>
                    <fullName>TNC Reserves</fullName>
                </value>
                <value>
                    <fullName>External Loan</fullName>
                </value>
                <value>
                    <fullName>Non-Governmental Organization</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Private Foundation</fullName>
                </value>
                <value>
                    <fullName>Seller</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Source_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Army Corps of Engineers</fullName>
                </value>
                <value>
                    <fullName>Atwell Endowment</fullName>
                </value>
                <value>
                    <fullName>Bechtel Foundation</fullName>
                </value>
                <value>
                    <fullName>Bureau of Land Management</fullName>
                </value>
                <value>
                    <fullName>Bureau of Reclamation</fullName>
                </value>
                <value>
                    <fullName>CA Acquisition Redwoods  2050020000-0004</fullName>
                </value>
                <value>
                    <fullName>CA Capital Projects  2050020005-0000</fullName>
                </value>
                <value>
                    <fullName>CA Del Sur -2051242200-0000</fullName>
                </value>
                <value>
                    <fullName>CALFED</fullName>
                </value>
                <value>
                    <fullName>California Conservation Corps</fullName>
                </value>
                <value>
                    <fullName>California Department of Conservation</fullName>
                </value>
                <value>
                    <fullName>California Department of Fish &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>California Department of Food &amp; Agriculture</fullName>
                </value>
                <value>
                    <fullName>California Department of Forestry &amp; Fire Protection</fullName>
                </value>
                <value>
                    <fullName>California Department of Transportation (Caltrans)</fullName>
                </value>
                <value>
                    <fullName>California Department of Water Resources (DWR)</fullName>
                </value>
                <value>
                    <fullName>California Farmland Conservancy Program</fullName>
                </value>
                <value>
                    <fullName>California State Parks</fullName>
                </value>
                <value>
                    <fullName>California Tahoe Conservancy</fullName>
                </value>
                <value>
                    <fullName>Central Coast Opportunity Fund (CCOF)</fullName>
                </value>
                <value>
                    <fullName>Central Coast Opportunity Fund (CCOF) Las Uvas</fullName>
                </value>
                <value>
                    <fullName>Central Valley &amp; Mountains</fullName>
                </value>
                <value>
                    <fullName>Coachella Valley Mountains Conservancy</fullName>
                </value>
                <value>
                    <fullName>Conservation Buyer</fullName>
                </value>
                <value>
                    <fullName>Department of Parks &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Donor</fullName>
                </value>
                <value>
                    <fullName>Federal Trust Fund</fullName>
                </value>
                <value>
                    <fullName>Klamath/Salmon Initiative</fullName>
                </value>
                <value>
                    <fullName>LPF Loan</fullName>
                </value>
                <value>
                    <fullName>Marine Conservation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tract_Name__c</fullName>
        <label>Tract Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N30000000yADLEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deal Sources and Uses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Tract_Name__c</columns>
        <columns>Source_Type__c</columns>
        <columns>Source__c</columns>
        <columns>Fund_Type__c</columns>
        <columns>Fund_Amount__c</columns>
        <columns>Cost_Type__c</columns>
        <columns>Cost_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Source/Use-{0000}</displayFormat>
        <label>Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Sources and Uses</pluralLabel>
    <recordTypes>
        <fullName>Amendment_Cost</fullName>
        <active>false</active>
        <description>Select the &quot;Amendment Cost&quot; record type to enter a cost associated with a land transaction amendment.</description>
        <label>Amendment Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Amendment_Fund</fullName>
        <active>false</active>
        <description>Select the &quot;Amendment Fund&quot; record type to enter a fund associated with a land transaction amendment.</description>
        <label>Amendment Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>DealSource</fullName>
        <active>true</active>
        <description>Select the &quot;Deal Source&quot; record type to enter funding information associated with the asset transaction.</description>
        <label>Deal Source</label>
    </recordTypes>
    <recordTypes>
        <fullName>DealUse</fullName>
        <active>true</active>
        <description>Select the &quot;Deal Use&quot; record type to enter a cost associated with the asset transaction.</description>
        <label>Deal Use</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Loan_Rate_Repayment_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
  OR (
     ISPICKVAL(Source_Type__c , &quot;TNC Loan&quot;),
     ISPICKVAL(Source_Type__c , &quot;External Loan&quot;)),
ISBLANK(Source_Description__c )
)</errorConditionFormula>
        <errorMessage>Please add the loan rate and repayment schedule information in the &quot;Source Description&quot; text field.</errorMessage>
    </validationRules>
</CustomObject>